gitops/espresso/apps/pocket-id/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
  labels:
    gateway-access: public
