gitops/espresso/apps/pocket-id/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  serviceName: pocket-id-internal
  template:
    metadata:
      labels:
        app: pocket-id
      annotations:
        secret.reloader.stakater.com/reload: pocket-id-env
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v2.11.0@sha256:b7c37ab3044e53fd29b5f7295eebff5fdc0367dc043f36b41bcbe1815fcd965d
          ports:
            - containerPort: 1411
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 18
          volumeMounts:
            - mountPath: /app/data
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: nvme-ha
