gitops/espresso/apps/pocket-id/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id-internal
  namespace: pocket-id
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
  annotations:
    lbipam.cilium.io/ips: 10.0.188.32,fd7a:115c:a1e0:188::32
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 80
      targetPort: http
