gitops/espresso/apps/pocket-id/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id-public
  namespace: pocket-id
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - id.gullhaugveien.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: pocket-id
          port: 80
