gitops/espresso/apps/pocket-id/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  endpointSelector:
    matchLabels:
      app: pocket-id
  ingress:
    # Kubelet HTTP probes and node-forwarded LB traffic
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    # Gateway API traffic (public + internal gateway)
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    # LAN and VPN direct access to LB VIP
    - fromCIDR:
        - 10.0.186.0/24
        - fd7a:115c:a1e0:186::/64
        - 10.0.187.0/24
        - fd7a:115c:a1e0:187::/64
        - 100.102.0.0/16
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    # NetBird server OIDC validation
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: netbird
            k8s:app: netbird-server
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    # Uptime-kuma monitoring
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: uptime-kuma
            k8s:app: uptime-kuma
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    # Nextcloud OIDC discovery/token exchange
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: nextcloud
            k8s:app: nextcloud
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    # Immich OIDC discovery/token exchange
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            k8s:app: immich
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    # Mealie OIDC discovery/token exchange
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mealie
            k8s:app: mealie
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    # Hermes Android viewer OAuth2 Proxy OIDC key/token/userinfo requests
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: hermes-agent
            k8s:app: hermes-agent
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
